--- a/deb-mariadb/conf/server.cnf
+++ b/deb-mariadb/conf/server.cnf
@@ -8,7 +8,6 @@
 [server]
 
 # this is only for the mysqld standalone daemon
-
 [mysqld]
 
 #
@@ -54,15 +53,15 @@ query_cache_size        = 16M
 # Both location gets rotated by the cronjob.
 # Be aware that this log type is a performance killer.
 # As of 5.1 you can enable the log at runtime!
-#general_log_file       = /var/log/mysql/mysql.log
-#general_log            = 1
+general_log_file       = /var/log/mysql/mysql.log
+general_log            = 1
 #
 # Error log - should be very few entries.
 #
 log_error = /var/log/mysql/error.log
 #
 # Enable the slow query log to see queries with especially long duration
-#slow_query_log_file    = /var/log/mysql/mariadb-slow.log
+slow_query_log_file    = /var/log/mysql/mariadb-slow.log
 #long_query_time        = 10
 #log_slow_rate_limit    = 1000
 #log_slow_verbosity     = query_plan
@@ -73,7 +72,7 @@ log_error = /var/log/mysql/error.log
 #       other settings you may need to change.
 #server-id              = 1
 #log_bin                = /var/log/mysql/mysql-bin.log
-expire_logs_days        = 10
+#expire_logs_days        = 10
 #max_binlog_size        = 100M
 #binlog_do_db           = include_database_name
 #binlog_ignore_db       = exclude_database_name
