--- a/podman-deb-mariadb/conf/server.cnf
+++ b/podman-deb-mariadb/conf/server.cnf
@@ -35,7 +35,7 @@ bind-address             = 0.0.0.0
 #
 
 #key_buffer_size        = 128M
-max_allowed_packet     = 2G
+#max_allowed_packet     = 2G
 #thread_stack           = 192K
 #thread_cache_size      = 8
 # This replaces the startup script and checks MyISAM tables if needed
