--- a/pod-deb-mariadb/Containerfile
+++ b/pod-deb-mariadb/Containerfile
@@ -17,10 +17,12 @@ COPY init/start.sh /usr/local/bin/start.sh
 COPY init/sqlinit.sh /usr/local/bin/sqlinit.sh
 COPY init/conf.sql /usr/local/bin/conf.sql
 COPY init/sqlbackup.sh /usr/local/bin/sqlbackup.sh
+COPY init/sqlrestore.sh /usr/local/bin/sqlrestore.sh
 
 RUN chmod +x /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/sqlinit.sh
 RUN chmod +x /usr/local/bin/sqlbackup.sh
+RUN chmod +x /usr/local/bin/sqlrestore.sh
 
 COPY conf/server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
