--- a/pod-deb-mariadb/Containerfile
+++ b/pod-deb-mariadb/Containerfile
@@ -14,11 +14,13 @@ RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 EXPOSE 3306
 
 COPY init/start.sh /usr/local/bin/start.sh
+COPY init/restart.sh /usr/local/bin/restart.sh
 COPY init/sqlinit.sh /usr/local/bin/sqlinit.sh
 COPY init/conf.sql /usr/local/bin/conf.sql
 COPY init/sqlbackup.sh /usr/local/bin/sqlbackup.sh
 COPY init/sqlrestore.sh /usr/local/bin/sqlrestore.sh
 
+RUN chmod +x /usr/local/bin/restart.sh
 RUN chmod +x /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/sqlinit.sh
 RUN chmod +x /usr/local/bin/sqlbackup.sh
