--- a/pod-deb-webphp/Containerfile
+++ b/pod-deb-webphp/Containerfile
@@ -40,7 +40,9 @@ ENV APACHE_LOG_DIR /var/log/apache2
 EXPOSE 80 443
 
 COPY init/start.sh /usr/local/bin/start.sh
+COPY init/restart.sh /usr/local/bin/restart.sh
 RUN chmod +x /usr/local/bin/start.sh
+RUN chmod +x /usr/local/bin/restart.sh
 
 ENTRYPOINT ["/usr/local/bin/start.sh"]
 
