--- a/pod-deb-webphp/conf/80.conf
+++ b/pod-deb-webphp/conf/80.conf
@@ -4,6 +4,12 @@
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
 
+	<Directory /var/www/html/backup>
+		Options Indexes FollowSymLinks
+		AllowOverride All
+		Require all granted
+	</Directory>
+
 	ErrorLog ${APACHE_LOG_DIR}/error.log
 	CustomLog ${APACHE_LOG_DIR}/access.log combined
 </VirtualHost>
