--- a/pod-deb-webphp/Containerfile
+++ b/pod-deb-webphp/Containerfile
@@ -32,20 +32,17 @@ ENV APACHE_RUN_USER www-data
 ENV APACHE_RUN_GROUP www-data
 ENV APACHE_LOG_DIR /var/log/apache2
 
-# RUN ln -sf /dev/stderr /var/log/apache2/access.log
-# RUN ln -sf /dev/stderr /var/log/apache2/error.log
-# RUN ln -sf /proc/self/fd/1 /var/log/apache2/access.log
-# RUN ln -sf /proc/self/fd/1 /var/log/apache2/error.log
-
 EXPOSE 80 443
 
 COPY init/start /usr/local/bin/start
 COPY init/servstart /usr/local/bin/servstart
 COPY init/servstop /usr/local/bin/servstop
+COPY init/addapacheuser /usr/local/bin/addapacheuser
 
 RUN chmod +x /usr/local/bin/start
 RUN chmod +x /usr/local/bin/servstart
 RUN chmod +x /usr/local/bin/servstop
+RUN chmod +x /usr/local/bin/addapacheuser
 
 ENTRYPOINT ["/usr/local/bin/start"]
 
