--- a/pod-deb-mariadb/Containerfile
+++ b/pod-deb-mariadb/Containerfile
@@ -11,6 +11,9 @@ RUN apt-get install -y mc
 
 RUN apt-get clean && rm -rf /var/lib/apt/lists/*
 
+RUN mkdir /run/mysqld
+RUN chmod 777 /run/mysqld
+
 EXPOSE 3306
 
 COPY init/start /usr/local/bin/start
