--- a/pod-deb-webphp/conf/80.conf
+++ b/pod-deb-webphp/conf/80.conf
@@ -4,7 +4,7 @@
 	ServerAdmin webmaster@localhost
 	DocumentRoot /var/www/html
 
-	<Directory /var/www/html/backup>
+	<Directory /var/www/html>
 		Options Indexes FollowSymLinks
 		AllowOverride All
 		Require all granted
