--- a/pod-deb-webphp/conf/443.conf
+++ b/pod-deb-webphp/conf/443.conf
@@ -4,7 +4,7 @@
 
 		DocumentRoot /var/www/html
 
-	<Directory /var/www/html/backup>
+	<Directory /var/www/html>
 		Options Indexes FollowSymLinks
 		AllowOverride All
 		Require all granted
