--- a/pod-deb-mariadb/Containerfile
+++ b/pod-deb-mariadb/Containerfile
@@ -33,6 +33,9 @@ RUN chmod +x /usr/local/bin/sqlrestore
 
 COPY conf/server.cnf /etc/mysql/mariadb.conf.d/50-server.cnf
 
+RUN rm /etc/localtime
+RUN ln -s /usr/share/zoneinfo/Europe/Budapest /etc/localtime
+
 ENTRYPOINT ["/usr/local/bin/start"]
 
 #CMD ["/bin/bash"]
